--- a/community.html
+++ b/community.html
@@ -203,7 +203,7 @@
                 <div class="card2">
                     <img src="plastic.jpg" alt="Plastic-Free July Challenge">
                     <div class="card-content">
-                        <span class="badge active1">Active</span>
+                        <span class="badge-active1">Active</span>
                         <span class="time">Ends in 12 days</span>
                         <h3>Plastic-Free July Challenge</h3>
                         <p>Eliminate single-use plastics for an entire month and track your impact.</p>
@@ -217,7 +217,7 @@
                 <div class="card2">
                     <img src="sprint.jpg" alt="Community Garden Sprint">
                     <div class="card-content">
-                        <span class="badge active1">Active</span>
+                        <span class="badge-active1">Active</span>
                         <span class="time">Ends in 8 days</span>
                         <h3>Community Garden Sprint</h3>
                         <p>Create or expand community gardens in urban areas worldwide.</p>
