--- a/community.html
+++ b/community.html
@@ -106,7 +106,7 @@
                     <img src="bee.jpg" alt="Balcony Garden">
                     <div class="card-content">
                         <h3>Balcony Bee Haven</h3>
-                        <p>Anya’s balcony<a href="index.html#bill">Buy Now</a> buzzing with bees thanks to her flowering
+                        <p>Anya’s balcony is now buzzing with bees thanks to her flowering
                             plants and mini hive.
                         </p>
                         <p class="author">Anya Petrova – Warsaw, Poland</p>
@@ -126,7 +126,7 @@
                     <img src="indor microgreens.jpg" alt="Indoor Plants">
                     <div class="card-content">
                         <h3>Techie Turns Gardener</h3>
-                        <p>Ethan began growing microgreens indoors <a href="index.html#bill">Buy Now</a> sells them to
+                        <p>Ethan began growing microgreens indoors and now sells them to
                             local
                             cafés.</p>
                         <p class="author">Ethan Brooks – San Francisco, USA</p>
